syntax = "proto3";

option csharp_namespace = "BudgetTracker";

package Protos;

service SoWService {
  rpc GetSystemInfo (Empty) returns (SystemInfo);
  //rpc GetState (Empty) returns (stream SoW);
}

message SystemInfo {
  bool isProduction = 1;
  string launchTime = 2;
  string stats = 3;

  string currentVersion = 4;
  string latestVersion = 5;
  bool hasNewerVersion = 6;
}

message Empty { }